crates/fig_integrations/src/shell/snapshots/fig_integrations__shell__test__bash_post_bash_profile.post.bash.snap
---
source: crates/fig_integrations/src/shell/mod.rs
expression: integration.get_contents()
---
_BAY_LOCAL_BIN="$HOME/.local/bin"
[[ ":$PATH:" != *":$_BAY_LOCAL_BIN:"* ]] && PATH="${PATH:+"$PATH:"}$_BAY_LOCAL_BIN"
unset _BAY_LOCAL_BIN

[ -n "$BASH_VERSION" ] && command -v bay >/dev/null 2>&1 && eval "$(bay init bash post --rcfile bash_profile)"
